syntax = "proto3";

import "request.proto";
import "response.proto";
import "sync.proto";
import "blockchain.proto";
import "auth.proto";
import "executer.proto";

enum MsgType {
    REQUEST = 0;
    HEADER = 1;
    BLOCK = 2;
    STATUS = 3;
    MSG = 4;
    RESPONSE = 5;
    VERIFY_TX_REQ = 6;
    VERIFY_TX_RESP = 7;
    VERIFY_BLK_REQ = 8;
    VERIFY_BLK_RESP = 9;
    BLOCK_TXHASHES = 10;
    BLOCK_TXHASHES_REQ = 11;
    BLOCK_WITH_PROOF = 12;
    BLOCK_TXS = 13;
    RICH_STATUS = 14;
    SYNC_REQ = 15;
    SYNC_RES = 16;
    EXECUTED_RESULT = 17;
}

enum OperateType {
    BROADCAST = 0;
    SINGLE = 1;
    SUBTRACT = 2;
}

message Message {
    uint32 cmd_id = 1;
    MsgType type = 2;
    uint32 origin = 3;
    OperateType operate = 4;

    oneof content {

        bytes RawBytes = 5;

        Request Request = 6;
        Response Response = 7;

        SyncRequest SyncRequest = 8;
        SyncResponse SyncResponse = 9;

        Status Status = 10;
        RichStatus RichStatus = 11;

        Block Block = 12;
        BlockWithProof BlockWithProof = 13;
        BlockHeader BlockHeader = 14;
        BlockTxs BlockTxs = 15;

        BlockTxHashes BlockTxHashes = 16;
        BlockTxHashesReq BlockTxHashesReq = 17;

        VerifyTxReq VerifyTxReq = 18;
        VerifyTxResp VerifyTxResp = 19;
        VerifyBlockReq VerifyBlockReq = 20;
        VerifyBlockResp VerifyBlockResp = 21;

        ExecutedResult ExecutedResult = 22;
    }
}
